spotify style changes

--- a/api/templates/spotify-melio.html.j2
+++ b/api/templates/spotify-melio.html.j2
@@ -18,8 +18,8 @@
                 .container {
                     border-radius: 5px;
                     padding: 10px 10px 10px 0px;
-                    background-color: #{{background_color}};
-                    border: 1px solid #{{border_color}};
+                    background-color: #E5E1F4;
+                    border: 1px solid #978CFF;
                 }
 
                 .art {
@@ -34,7 +34,7 @@
 
                 .song {
                     width: 330px;
-                    color: #f7f7f7;
+                    color: #978CFF;
                     overflow: hidden;
                     margin-top: 3px;
                     font-size: 24px;
@@ -58,7 +58,7 @@
                 .cover {
                     width: 100px;
                     height: 100px;
-                    border-radius: 5px;
+                    border-radius: 50%;
                 }
 
                 #bars {
