spotify style changes

--- a/api/templates/spotify-melio.html.j2
+++ b/api/templates/spotify-melio.html.j2
@@ -18,8 +18,8 @@
                 .container {
                     border-radius: 5px;
                     padding: 10px 10px 10px 0px;
-                    background-color: #E5E1F4;
-                    border: 1px solid #978CFF;
+                    background-color: #F6F8FA;
+                    border: 0px;
                 }
 
                 .art {
@@ -33,11 +33,11 @@
                 }
 
                 .song {
-                    width: 330px;
+                    width: 320px;
                     color: #978CFF;
                     overflow: hidden;
                     margin-top: 3px;
-                    font-size: 24px;
+                    font-size: 20px;
                     text-align: center;
                     white-space: nowrap;
                     text-overflow: ellipsis;
@@ -46,7 +46,7 @@
                 .artist {
                     width: 330px;
                     color: #9f9f9f;
-                    font-size: 20px;
+                    font-size: 16px;
                     margin-top: 4px;
                     text-align: center;
                     margin-bottom: 5px;
@@ -58,11 +58,11 @@
                 .cover {
                     width: 100px;
                     height: 100px;
-                    border-radius: 50%;
+                    border-radius: 10px;
                 }
 
                 #bars {
-                    width: 40px;
+                    width: 80px;
                     height: 30px;
                     bottom: 23px;
                     position: absolute;
