--- a/api/templates/spotify-melio.html.j2
+++ b/api/templates/spotify-melio.html.j2
@@ -18,7 +18,7 @@
                 .container {
                     border-radius: 5px;
                     padding: 10px 10px 10px 0px;
-                    background-color: #F6F8FA;
+                    background-color: #D8E0E9;
                     border: 0px;
                 }
 
@@ -80,7 +80,7 @@
                 
                 .spotify-logo {
                     position: fixed;
-                    right: 20px;
+                    right: 10px;
                     top: 10px;
                     width: 25px;
                 }
