--- a/api/templates/spotify-melio.html.j2
+++ b/api/templates/spotify-melio.html.j2
@@ -18,7 +18,7 @@
                 .container {
                     border-radius: 5px;
                     padding: 10px 10px 10px 0px;
-                    background-color: #D8E0E9;
+                    background-color: #E5EAF0;
                     border: 0px;
                 }
 
