--- a/api/templates/spotify-melio.html.j2
+++ b/api/templates/spotify-melio.html.j2
@@ -16,11 +16,12 @@
                 }
                 
                 .container {
-                    border-radius: 5px;
+                    border-radius: 10px;
                     padding: 10px 10px 10px 0px;
-                    background-color: #E5EAF0;
                     border: 0px;
+                    box-shadow: 0 0 6px rgb(0 0 0 / 40%);
                 }
+                <!--background-color: #E5EAF0; -->
 
                 .art {
                     width: 27%;
