--- a/api/templates/spotify-melio.html.j2
+++ b/api/templates/spotify-melio.html.j2
@@ -20,6 +20,7 @@
                     padding: 10px 10px 10px 0px;
                     border: 0px;
                     box-shadow: 0 0 6px rgb(0 0 0 / 40%);
+                    margin: 10px;
                 }
                 <!--background-color: #E5EAF0; -->
 
